--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encurtador de URL</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
+
 <body>
-    <div class="container">
+    <main class="container">
         <h1>Encurtador de URL</h1>
+        <p class="description">Cole seu link longo abaixo para encurtá-lo.</p>
+
         <form id="shorten-form">
-            <input type="url" id="url-input" placeholder="Cole sua URL aqui" required>
-            <button type="submit">Encurtar</button>
+            <div class="input-group">
+                <label for="url-input" class="sr-only">URL para encurtar</label>
+                <input type="url" id="url-input" placeholder="Ex: https://seusite.com/muito-longo" required
+                    autocomplete="off">
+                <button type="submit" id="submit-btn">
+                    <span class="btn-text">Encurtar</span>
+                </button>
+            </div>
         </form>
-        <div id="result"></div>
-    </div>
+
+        <div id="feedback-area" class="hidden">
+            <div class="result-container">
+                <a href="#" id="shortened-link" target="_blank" rel="noopener noreferrer"></a>
+                <button id="copy-btn" title="Copiar link">Copiar</button>
+            </div>
+        </div>
+
+        <p id="error-message" class="error hidden"></p>
+    </main>
+
     <script src="script.js"></script>
 </body>
+
 </html>
