Refactor frontend UI for URL shortener: Update HTML structure, enhance styling with Tailwind CSS, and improve user feedback on URL copy action.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,26 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encurtador de URL</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Url Shortener</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        .v0-card {
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: #09090b;
+        }
+
+        .v0-input {
+            background: #09090b;
+            border: 1px solid #27272a;
+        }
+
+        .v0-button {
+            background: #fafafa;
+            color: #09090b;
+        }
+
+        .v0-button:hover {
+            background: #e4e4e7;
+        }
+    </style>
 </head>
 
-<body>
-    <div class="main-wrapper">
-        <div class="container">
-            <h1>Encurtador de URL</h1>
-    
-            <form id="shorten-form">
-                <div class="input-group">
-                    <input type="url" id="url-input" placeholder="Cole sua URL aqui (ex: https://...)" required
-                        autocomplete="off">
-                    <button type="submit">Encurtar</button>
+<body class="bg-[#030303] text-[#fafafa] min-h-screen flex items-center justify-center p-6">
+
+    <div class="w-full max-w-md space-y-6">
+        <div class="space-y-2 text-center">
+            <h1 class="text-3xl font-semibold tracking-tighter">Url Shortener</h1>
+            <p class="text-zinc-400 text-sm">Encurte seus links de forma rápida e eficiente.</p>
+        </div>
+
+        <div class="v0-card p-6 rounded-xl shadow-2xl">
+            <form id="shorten-form" class="space-y-4">
+                <div class="space-y-1.5">
+                    <label class="text-xs font-medium text-zinc-400 uppercase tracking-wider">URL Original</label>
+                    <input type="url" id="url-input" placeholder="https://sua-url-longa.com" required
+                        class="v0-input w-full rounded-md px-3 py-2 text-sm outline-none focus:ring-1 focus:ring-zinc-400 transition-all placeholder:text-zinc-600">
                 </div>
+
+                <button type="submit"
+                    class="v0-button w-full h-10 rounded-md text-sm font-medium transition-colors active:scale-[0.98]">
+                    Encurtar agora
+                </button>
             </form>
 
-            <div id="result"></div>
+            <div id="result" class="mt-6 empty:hidden">
+            </div>
         </div>
+
     </div>
+
     <script src="script.js"></script>
 </body>
 
